--- a/index.html
+++ b/index.html
@@ -64,5 +64,41 @@
             </div>
         </div>
     </div>
+    <div id="product">
+        <div class="container-product">
+            <div class="title-product">
+                <p>Our Products</p>
+            </div>
+           
+            <div class="content-product">
+                <div class="item-product">
+                    <div class="card-product"></div>
+                </div>
+                <div class="item-product">
+                    <div class="card-product"></div>
+                </div><div class="item-product">
+                    <div class="card-product"></div>
+                </div>
+                <div class="item-product">
+                    <div class="card-product"></div>
+                </div>
+                <div class="item-product">
+                    <div class="card-product"></div>
+                </div>
+                <div class="item-product">
+                    <div class="card-product"></div>
+                </div>
+                <div class="item-product">
+                    <div class="card-product"></div>
+                </div>
+                <div class="item-product">
+                    <div class="card-product"></div>
+                </div>
+            </div>
+            <div class="btn-product">
+                <button>Show More</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
